[style/refactor] Nova comanda, menu produtos e detalhes da comanda Estilização global: - inserção da estilização do scrollbar, modal, hidden, thead fixo e posicionamento relative - alteração do posicionamento e largura do btn Nova comanda: - formatação dos arquivos - exclusão de estilos presentes no arquivo de estilização global Menu produtos: - formatação do arquivo tsx - ajuste da tabela com scrollview e thead fixo - renomeação do arquivo de estilo Command header: - alteração da margem Add button: - alteração para posição fixa Detalhes da comanda: - formatação dos arquivos - ajuste da tabela com scrollview e thead fixo - ajuste do footer da página para garçom e caixa

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap');
 
-body, html, button {
+* {
   font-family: 'Lato', sans-serif;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
@@ -38,7 +38,7 @@ button {
 }
 
 .btn {
-  width: calc(100% - 60px);
+  width: 100%;
   height: 60px;
   border-radius: 6px;
   margin-top: 30px;
@@ -46,8 +46,6 @@ button {
   font-weight: 700;
   color: var(--white);
   background: var(--dark-orange);
-  position: absolute;
-  bottom: 70px;
   transition: all 300ms;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.16);
 
@@ -65,6 +63,7 @@ table {
   text-align: left;
   border-collapse: collapse;
   width: 100%;
+  overflow: scroll;
 
   tr {
     height: 50px;
@@ -76,13 +75,22 @@ table {
 
   thead {
     tr {
-      border-bottom: solid 2px var(--black);
+      border-bottom: solid 2px var(--black) !important;
     }
+  }
+
+  .fixed-thead {
+    box-shadow: 0px 1px 0px #000000;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    background: #fff;
   }
 
   tbody {
     tr {
-      border-bottom: solid 1px var(--medium-light-grey);
+      border-bottom: solid 0.8px var(--medium-light-grey);
   
       &:last-child{
         border-bottom: none;
@@ -94,4 +102,68 @@ table {
 input[type=checkbox] {
   accent-color: var(--regular-orange-hover);
   cursor: pointer;
+}
+
+.relative-position {
+  position: relative;
+}
+
+.hidden {
+  display: none;
+}
+
+.modal {
+  z-index: 1;
+  background-color: rgba(0,0,0, 0.3);
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  bottom: 0;
+
+  .modal-container {
+    position: absolute;
+    z-index: 1;
+    display: flex;
+    background-color: #FFFFFF;
+    border-radius: 15px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    flex-direction: column;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 80%;
+    width: 80%;
+    margin: auto;
+  }
+
+  .modal-background {
+    position: absolute;
+    z-index: -1;
+    height: 100%;
+    width: 100%;
+  }
+
+  .close-modal {
+    background-color: #ffdec3;
+    border-radius: 50px;
+    height: 30px;
+    width: 30px;
+  }
+}
+
+*::-webkit-scrollbar {
+  width: 12px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #F1F1F1;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #C4C4C4;
+  border-radius: 20px;
+  border: 3px solid #F1F1F1;
 }
