--- a/frontend/src/pages/DetalheComanda/styles.scss
+++ b/frontend/src/pages/DetalheComanda/styles.scss
@@ -1,30 +1,27 @@
 
-.command-details-page{
-    
-  p:nth-child(2){
-    word-spacing: 8px
-  }
-    
-  .command-details-container{
+.command-details-page {
+  .command-details-container {
     max-width: 800px;
-    min-height: calc(100vh - 120px);
+    min-height: calc(100vh - 90px);
     margin: 0 auto;
     padding: 0 30px;
     position: relative;
-        
-    .delete-item-option-container{
-      display: flex;
-      justify-content: flex-end;
-      width: 100%;
-      cursor: pointer;
-      margin-bottom: 20px;
+  
+    .table-container {
+      height: calc(100vh - 300px);
+      overflow:auto;
+    }
+
+    .delete-item {
+      text-align: end;
       text-decoration: underline;
+      margin-bottom: 10px;
     }
 
     label {
       font-weight: 600;
     }
-      
+
     input {
       height: 36px;
       padding: 0 10px;
@@ -35,56 +32,88 @@
       margin-left: 16px;
       border: solid 2px var(--light-grey);
       
-      &:disabled{
+      &:disabled {
         cursor:not-allowed;
       }
     }
 
-    p{
-      text-align: center;
-    }
-        
-    .selectItemCheckbox{
+    .selectItemCheckbox {
       height: 26px;
       margin-left: 0;
     }
+  }
 
-    .order-total{
-      position: absolute;
-      bottom: 40px;
-      left: 30px;
-      width: 200px;
-      height: 60px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background-color: var(--light-orange);
-      border-radius: 6px;
-    
-      p{
-        word-spacing: 12px;
-        font-weight: 600;
+  .footer {
+    position: absolute;
+    bottom: 0;
+    background-color: white;
+    width: 100%;
+    max-width: 800px;
+    left: 0; 
+    right: 0; 
+    margin-left: auto; 
+    margin-right: auto;
+    padding: 20px 30px 40px;
+  }
+
+  .order-total {
+    width: 200px;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: var(--light-orange);
+    border-radius: 6px;
+    padding: 0 20px;
+    gap: 20px;
+
+    .total-text {
+      text-transform: uppercase;
+    }
+
+    .value {
+      word-spacing: 12px;
+      font-weight: 600;
+      font-size: 18px;
+    }
+  }
+
+  .waiter-footer .order-total {
+    width: 100% !important;
+    justify-content: center !important;
+  }
+
+  @media screen and (max-width: 980px) {
+    .cashier-footer {
+      .add-button {
+        bottom: 120px;
       }
     }
-    
+
+    .waiter-footer .order-total {
+      width: calc(100% - 90px) !important;
+    }
   }
   
-  @media only screen and (max-width: 900px){
-    .closeCommandButton{
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      border-radius: 0;
+  @media only screen and (max-width: 550px){
+    .cashier-footer {
+      padding: 20px 0px 0px;
+
+      .add-button {
+        bottom: 90px;
+      }
+
+      .order-total {
+        margin-left: 30px;
+      }
+
+      .closeCommandButton {
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        border-radius: 0;
+      }
     }
-  
-    .order-total{
-      bottom: 90px !important;
-    }
-  
-    .add-button{
-      bottom: 90px !important;
-    }
-  
   }
 }
 
